--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -22,9 +22,7 @@ RUN apt clean && rm -rf /var/lib/apt/lists/*
 # Install extensions
 RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql
 RUN docker-php-ext-install pdo_pgsql 
-
-# Install composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN docker-php-ext-install sockets 
 
 # Add user for laravel
 RUN groupadd -g 1000 www
@@ -39,6 +37,9 @@ RUN chown -R www-data:www-data .
 
 # Change current user to www
 USER www
+
+# Install composer
+COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 
 EXPOSE 9000
 CMD ["php-fpm"]
