--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.0.2",
         "doctrine/dbal": "^3.3",
+        "friendsofphp/php-cs-fixer": "^3.8",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "phpstan/phpstan": "^1.5",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^12.0"
     },
     "require-dev": {
@@ -34,6 +36,8 @@
         }
     },
     "scripts": {
+        "phpcs-fix" : "php-cs-fixer fix ",
+        "phpstan" : "phpstan analyse --memory-limit=-1 app/",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
