--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     restart: unless-stopped
     tty: true
     working_dir: /var/www
+    command: bash -c "composer install && php-fpm"
 
     volumes:
       - ./:/var/www
